Fix mozilla overflow

--- a/style/index.css
+++ b/style/index.css
@@ -11,3 +11,8 @@ body {
 	width: 100%;
 	height: 100vh;
 }
+
+/* Fix mozilla error */
+canvas {
+	display: block;
+}
